2000-11-08  Sven Wischnowsky  <wischnow@zsh.org>

	* 13128: Completion/Builtins/_zstyle, Completion/Core/_match,
 	Completion/Core/_path_files, Doc/Zsh/compsys.yo: aloow value
 	`pattern' for insert-unambiguous style to preserve patterns in the
 	original string; add list-suffixes style to make file completion
 	list path suffixes if possible; slightly improved completion of
 	pathnames with multiple pattern-components
	
2000-11-06  Bart Schaefer  <schaefer@zsh.org>

	* 13127: Completion/User/_rcs: Test of $compstate[nmatches] was a
	no-op, removed it.

2000-11-05  Bart Schaefer  <schaefer@zsh.org>

	* 13124: Functions/Misc/nslookup: Use "command nslookup" as it's
	now possible to call the nslookup function recursively from zpty.
	
	* unposted: Src/Modules/zpty.c: Cloned shell is non-interactive
	for purposes of calling zexit(), so it doesn't print job status,
	save history, etc.

	* 13123: Doc/Zsh/mod_zpty.yo, Src/utils.c, Src/Modules/zpty.c:
	Change `zpty' to act as a combination of `clone' and `eval', to
	remove the limitation that only external commands can be run on
	the pty.  Also fix typos in utils.c.

	* 13120: Doc/Zsh/mod_zpty.yo, Functions/Misc/nslookup,
	Src/utils.c, Src/Modules/zpty.c: Merge Sven's uncommitted patch
	from 13061 with 13116.  WARNING: This reverses the meaning of
	`zpty -b'; the default is now blocking, -b selects non-blocking.
	Fix nslookup accordingly.  Clean up read_poll() somewhat.
	Document that `zpty -w' and `zpty -r' can stream to/from the pty.

2000-11-04  Bart Schaefer  <schaefer@zsh.org>

	* 13118: Completion/Core/compinit: Add `bareglobqual' to the
	standard setopts for the completion system.

	* 13116: Src/Modules/zpty.c: More informative error output; better
	streaming behavior of `zpty -r'; prevent hang on `zpty -t' when
	the command was started with `zpty -b'.

2000-11-02  Sven Wischnowsky  <wischnow@zsh.org>

	* users/3503: Doc/Zsh/mod_parameter.yo, Src/jobs.c,