@@ -1,5 +1,8 @@
 2000-11-08  Sven Wischnowsky  <wischnow@zsh.org>
 
+	* ?????: Src/Modules/zpty.c: use possible read character from
+	read_poll() in loop in ptyread()
+	
 	* 13128: Completion/Builtins/_zstyle, Completion/Core/_match,
  	Completion/Core/_path_files, Doc/Zsh/compsys.yo: aloow value
  	`pattern' for insert-unambiguous style to preserve patterns in the
